접속 시 README파일이 열리는 문제 수정

--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://shield41791.github.io/movie_app-ghpage/"
+  "homepage": "https://shield41791.github.io/movie_app/index"
 }
