--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Build and Deploy
+name: Build and Deploy # Github Action 이름
 
 on:
   push:
@@ -19,8 +19,8 @@ jobs:
       - name: Install and Build
         uses: actions/setup-node@v1
       - run: npm install
-      - run: npm run build
-      - run: npm run export
+      - run: npm run build # 빌드 스크립트
+      - run: npm run deploy # 배포 스크립트
         env:
           CI: true
           DEPLOY_TARGET: gh-pages # 배포용 브랜치
