--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,35 +1,34 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Build and Deploy # Github Action 이름
+name: Build and Deploy
 
 on:
   push:
-    branches: [main] # 빌드할 브랜치
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-18.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
+      - uses: actions/checkout@v2
 
-      - name: Install and Build
-        uses: actions/setup-node@v1
-      - run: npm install
-      - run: npm run build # 빌드 스크립트
-      - run: npm run deploy # 배포 스크립트
-        env:
-          CI: true
-          DEPLOY_TARGET: gh-pages # 배포용 브랜치
-      - run: touch out/.nojekyll
+      - name: Setup Node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: "12.x"
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm ci
+      - run: npm run build
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # 배포용 브랜치
-          FOLDER: out # 이 폴더에 있는 파일을 배포
-          CLEAN: true # 배포 브랜치에 있는 파일들을 자동으로 삭제
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
