--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://shield41791.github.io/movielist"
+  "homepage": "https://shield41791.github.io/MovieList"
 }
